--- a/14_taskJobsinFinland/index.html
+++ b/14_taskJobsinFinland/index.html
@@ -47,7 +47,17 @@
             <li><a href="#">About</a></li>
             <li><a href="#">For Employers</a></li>
           </ul>
-          <a class="search" href="#"><i class="fas fa-search"></i></a>
+          <ul>
+            <li class="searchbar">
+              <a class="search" href="#"
+                ><i class="fas fa-search" aria-hidden="true"></i
+              ></a>
+              <div class="togglesearch">
+                <input type="text" placeholder="Search" />
+                <input type="button" value="search" />
+              </div>
+            </li>
+          </ul>
         </nav>
       </header>
       <main>
@@ -135,6 +145,7 @@
       </footer>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="scripts.js"></script>
   </body>
 </html>
