--- a/14_taskJobsinFinland/index.html
+++ b/14_taskJobsinFinland/index.html
@@ -11,6 +11,10 @@
       integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/1264ce8aa0.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="container">
@@ -61,6 +65,9 @@
         </nav>
       </header>
       <main>
+        <button onclick="topFunction()" id="myBtn" title="Go to top">
+          Top
+        </button>
         <section id="hero-banner">
           <div class="content">
             <h1><span>Jobs</span> in Finland</h1>
