make ipad responsive and fine tune search bar, sticky header

--- a/14_taskJobsinFinland/index.html
+++ b/14_taskJobsinFinland/index.html
@@ -57,9 +57,7 @@
           </ul>
           <ul>
             <li class="searchbar">
-              <a class="search" href="#"
-                ><i class="fas fa-search" aria-hidden="true"></i
-              ></a>
+              <a class="search"><i class="fas fa-search"></i></a>
               <div class="togglesearch">
                 <form>
                   <input type="text" placeholder="Search" />
