add mobile version first part

--- a/14_taskJobsinFinland/index.html
+++ b/14_taskJobsinFinland/index.html
@@ -71,19 +71,24 @@
         </nav>
       </header>
       <main>
-        <button onclick="topFunction()" id="myBtn" title="Go to top">
-          <i class="material-icons">keyboard_arrow_up </i>
-        </button>
+        <div id="back-to-top">
+          <button onclick="topFunction()" id="myBtn" title="Go to top">
+            <i class="material-icons">keyboard_arrow_up </i>
+          </button>
+        </div>
         <section id="hero-banner">
-          <div class="content">
-            <h1><span>Jobs</span> in Finland</h1>
-            <p>
-              Welcome to explore open job opportunitites in Finland. Here you
-              can find jobs targeted at english speaking professionals.
-            </p>
-            <p>
-              You can search by region, job category or use the keyword search.
-            </p>
+          <div class="parallax">
+            <div class="content">
+              <h1><span>Jobs</span> in Finland</h1>
+              <p>
+                Welcome to explore open job opportunitites in Finland. Here you
+                can find jobs targeted at english speaking professionals.
+              </p>
+              <p>
+                You can search by region, job category or use the keyword
+                search.
+              </p>
+            </div>
           </div>
         </section>
         <section id="category">
