back to top button

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -160,6 +160,9 @@
         </form>
         <p>Copyright &copy; My Website 2020</p>
       </div>
+      <div id="back-to-top" onclick="backToTop()">
+        <i class="material-icons">expand_less</i>
+      </div>
     </footer>
     <script src="main.js"></script>
   </body>
