--- a/Portfolio/animation.html
+++ b/Portfolio/animation.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Aaron Ojala Portfolio" />
     <meta name="author" content="Aaron Ojala" />
     <meta name="keywords" content="HTML, CSS, JavaScript, Portfolio" />
-    <title>Gallery</title>
+    <title>Animation</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap"
@@ -47,74 +47,9 @@
       </nav>
     </header>
     <main>
-      <section id="gallery">
-        <h2>Gallery</h2>
-        <p>Images from: <a href="https://unsplash.com/">Unsplash</a></p>
-        <div class="grid-container">
-          <figure class="gallery_item dog">
-            <img
-              src="https://source.unsplash.com/eoqnr8ikwFE"
-              class="gallery_img"
-              alt="Image_1"
-            />
-          </figure>
-          <figure class="gallery_item monkey">
-            <img
-              src="https://source.unsplash.com/r077pfFsdaU"
-              class="gallery_img"
-              alt="Image_2"
-            />
-          </figure>
-          <figure class="gallery_item fish">
-            <img
-              src="https://source.unsplash.com/YRShYRewi0M"
-              class="gallery_img"
-              alt="Image_3"
-            />
-          </figure>
-          <figure class="gallery_item giraffe">
-            <img
-              src="https://source.unsplash.com/pf97TYdQlWM"
-              class="gallery_img"
-              alt="Image_4"
-            />
-          </figure>
-          <figure class="gallery_item panda">
-            <img
-              src="https://source.unsplash.com/fFO5DsFV5gk"
-              class="gallery_img"
-              alt="Image_5"
-            />
-          </figure>
-          <figure class="gallery_item sloth">
-            <img
-              src="https://source.unsplash.com/cCyMJtn2g5w"
-              class="gallery_img"
-              alt="Image_6"
-            />
-          </figure>
-          <figure class="gallery_item elephant">
-            <img
-              src="https://source.unsplash.com/3isjMlIlj4A"
-              class="gallery_img"
-              alt="Image_7"
-            />
-          </figure>
-          <figure class="gallery_item penguin">
-            <img
-              src="https://source.unsplash.com/4TMBk-LqEKo"
-              class="gallery_img"
-              alt="Image_8"
-            />
-          </figure>
-          <figure class="gallery_item seal">
-            <img
-              src="https://source.unsplash.com/DDXpun_CQR0"
-              class="gallery_img"
-              alt="Image_9"
-            />
-          </figure>
-        </div>
+      <section id="animation">
+        <h2>Welcome to my amazing animation!</h2>
+        <div class="animatedCircle">Hover over me to stop!</div>
       </section>
     </main>
     <footer id="footer">
