--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -36,7 +36,7 @@
             <li><a href="#experience">Experience</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="#animation">Animation</a></li>
+            <li><a href="animation.html">Animation</a></li>
           </ul> 
         </li>
         <li><a href="#footer">Contact Me</a></li>
