add favicon, clean code

--- a/Portfolio/gallery.html
+++ b/Portfolio/gallery.html
@@ -16,6 +16,8 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon" />
+
     <script
       src="https://kit.fontawesome.com/1264ce8aa0.js"
       crossorigin="anonymous"
@@ -127,7 +129,7 @@
           </div>
           <div class="form-group">
             <label for="email">Your email</label>
-            <input type="emai" name="emaill" id="email" />
+            <input type="email" name="email" id="email" />
           </div>
           <div class="form-group">
             <label for="message">Message to me</label>
