--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -16,7 +16,12 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/1264ce8aa0.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon" />
+
+    <script
+      src="https://kit.fontawesome.com/1264ce8aa0.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -28,19 +33,19 @@
         <a onclick="mobileMenu()" class="icon"
           ><span class="material-icons">menu</span></a
         >
-       <ul class="mobilemenu">
-        <li>
-          <a href="#">Portfolio <i class="fas fa-angle-down"></i></a>
-          <ul>
-            <li><a href="#work">Work</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="animation.html">Animation</a></li>
-          </ul> 
-        </li>
-        <li><a href="#footer">Contact Me</a></li>
-        </ul>    
+        <ul class="mobilemenu">
+          <li>
+            <a href="#">Portfolio <i class="fas fa-angle-down"></i></a>
+            <ul>
+              <li><a href="#work">Work</a></li>
+              <li><a href="#experience">Experience</a></li>
+              <li><a href="#skills">Skills</a></li>
+              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="animation.html">Animation</a></li>
+            </ul>
+          </li>
+          <li><a href="#footer">Contact Me</a></li>
+        </ul>
       </nav>
     </header>
     <main>
@@ -116,25 +121,24 @@
           <h2>Skills</h2>
           <div class="containerSkills">
             <div class="box">
-              <i><img src="icons/html-5 1.svg" alt="htmlicon" /></i>
+              <i><img src="icons/html.svg" alt="htmlicon" /></i>
               <p>HTML</p>
               <progress max="100" value="25"></progress>
             </div>
             <div class="box">
-              <i><img src="icons/css 1.svg" alt="cssicon" /></i>
+              <i><img src="icons/css.svg" alt="cssicon" /></i>
               <p>CSS</p>
               <progress max="100" value="15"></progress>
             </div>
             <div class="box">
-              <i><img src="icons/plane 1 (1).svg" alt="planeicon" /> </i>
+              <i><img src="icons/plane.svg" alt="planeicon" /> </i>
               <p>Aviation</p>
               <progress max="100" value="80"></progress>
             </div>
             <div class="box">
-              <i><img src="icons/Basketball.svg" alt="basketballicon" /></i>
+              <i><img src="icons/basketball.svg" alt="basketballicon" /></i>
               <p>Basketball</p>
               <progress max="100" value="85"></progress>
-              </div>
             </div>
           </div>
         </div>
@@ -150,7 +154,7 @@
           </div>
           <div class="form-group">
             <label for="email">Your email</label>
-            <input type="emai" name="emaill" id="email" />
+            <input type="email" name="email" id="email" />
           </div>
           <div class="form-group">
             <label for="message">Message to me</label>
